--- a/src/catalog.html
+++ b/src/catalog.html
@@ -338,13 +338,10 @@
 
       <div class="contacts__wrap">
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</з>
-        <address class="contacts__address">ул. Большая Конюшенная, д. 19/8<br><br> Санкт-Петербург</address>
+        <address class="contacts__address"><p>ул. Большая Конюшенная, д. 19/8</p> <p>Санкт-Петербург</p></address>
       </div>
-      <picture>
-        <source media="(min-width: 768px) and (max-width: 1439px)" srcset="img/location-tablet.jpg 1x, img/location-tablet-large.jpg 2x">
-        <source media="(min-width: 1440px)" srcset="img/location-desktop.jpg 1x, img/location-desktop-large.jpg 2x">
-        <img class="contacts__map" src="img/location.png" width="320" height="362" alt="Карта к нашему офису">
-      </picture>
+      <div class="contacts__map" id="map">
+      </div>
     </footer>
   </main>
     
@@ -388,5 +385,23 @@
       </svg>
     </a>
   </footer>
+  <script src="js/scripts.min.js" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=ваш API-ключ&lang=ru_RU" type="text/javascript"></script>
+  <script  type="text/javascript">  
+    ymaps.ready(init);
+    function init(){
+        let myMap = new ymaps.Map("map", {
+            center: [59.938631, 30.323037],
+            zoom: 14
+        });
+        var myPlacemark = new ymaps.Placemark([59.938631, 30.323037], {}, {
+          iconLayout: 'default#image',
+          iconImageHref: './img/map-pin.svg',
+          iconImageSize: [57, 53],
+          iconImageOffset: [1, 1]
+        });
+      myMap.geoObjects.add(myPlacemark);
+    }
+    </script>
 </body>
 </html>
