--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,6 @@
     <section class="page-main__section example">
       <h2 class="page-main__heading example__heading">Живой пример</h2>
 
-      <div class="example__wrap">
         <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день. </p>
         <dl class="example__list">
           <dt class="example__title">Снижение веса</dt>
@@ -106,31 +105,68 @@
         <p class="example__cost">Затраты на питание: 15 000 руб.</p>
 
         <div class="example__images">
-          <img class="example__image example__image--before example__image--active" src="./img/before-mobile.png" width="280" height="232" alt="Кот до употребления корма: выглядит ленивым, толстым и страшным">
-          <img class="example__image example__image--after" src="./img/after-mobile.png" width="280" height="232" alt="Кот после употребления корма: выглядит молодым, худым и бодрым">
+          <div class="example__container example__container--before">
+            <picture class="example__image example__image--before example__image--active">
+              <source media="(min-width: 768px)" src="./img/before-tablet.png">
+              <img class="example__image example__image--before example__image--active" src="./img/before-mobile.png" width="280" height="232" alt="Кот до употребления корма: выглядит ленивым, толстым и страшным">
+            </picture>
+          </div>
+          <div class="example__container">
+            <picture class="example__image example__image--after">
+              <source media="(min-width: 768px)" src="./img/after-tablet.png">
+              <img class="example__image example__image--after example__image--active" src="./img/after-mobile.png" width="280" height="232" alt="Кот после употребления корма: выглядит молодым, худым и бодрым">
+            </picture>
+          </div>
         </div>
 
         <div class="example__switcher switcher switcher--before">
-          <button class="switcher__button" type="button">Было</button>
+          <button class="switcher__button switcher__button--before" type="button">Было</button>
           <div class="switcher__toggler"></div>
-          <input class="switcher__bar" type="range" value="50" min="17" max="83">
-          <button class="switcher__button" type="button">Стало</button>
+          <input class="switcher__bar" type="range" value="50" min="1" max="100" step="1" oninput="fun1()">
+          <button class="switcher__button switcher__button--after" type="button">Стало</button>
         </div>
       </div>
     </section>
+
+    <script>
+      let imageBefore = document.querySelector('.example__image--before');
+      let imageAfter = document.querySelector('.example__image--after');
+      let switcher = document.querySelector('.switcher');
+      let beforeButton = document.querySelector('.switcher__button--before');
+      let afterButton = document.querySelector('.switcher__button--after');
+
+      beforeButton.addEventListener('click', function() {
+          switcher.classList.add('switcher--before');
+          switcher.classList.remove('switcher--after');
+          imageBefore.classList.add('example__image--active');
+          imageAfter.classList.remove('example__image--active');
+      }
+      );
+
+      afterButton.addEventListener('click', function() {
+          switcher.classList.add('switcher--after');
+          switcher.classList.remove('switcher--before');
+          imageAfter.classList.add('example__image--active');
+          imageBefore.classList.remove('example__image--active');
+      }
+      );
+    </script>
+
+    <script>
+      let range = document.querySelector('.switcher__bar');
+      let image = document.querySelector('.example__container--before');
+      let fun1 = function () {
+          image.style.width = range.value + '%';
+      }
+    </script>
 
     <footer class="page-main__footer contacts">
       <h2 class="visually-hidden">Контакты</h2>
       <div class="contacts__wrap">
         <p class="contacts__title">приглашаем к сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 <br><br> Санкт-Петербург</address>
+        <address class="contacts__address"><p>ул. Большая Конюшенная, д. 19/8</p><p>Санкт-Петербург</p></address>
       </div>
       <div class="contacts__map" id="map">
-        <!-- <picture>
-        <source media="(min-width: 768px) and (max-width: 1439px)" srcset="./img/location-tablet.jpg 1x, ./img/location-tablet-large.jpg 2x">
-        <source media="(min-width: 1440px)" srcset="./img/location-desktop.jpg 1x, ./img/location-desktop-large.jpg 2x">
-        <img class="contacts__map" src="./img/location.png" width="320" height="362" alt="Карта к нашему офису">
-      </picture>  -->
       </div>
       
     </footer>
